--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "save-dev": "^0.0.1-security",
         "vue-axios": "^3.2.5",
         "vue-router": "^3.5.2",
         "vuex": "^3.6.2"
